fixed icon alignment issue in IE11 modal

--- a/src/css/components/modal.scss
+++ b/src/css/components/modal.scss
@@ -214,6 +214,8 @@
   }
 
   .links__icon {
+    width: 100%;
+    text-align: center;
     font-size: vmax(4);
   }
   
